# market-thesis-tracker

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  PHASE_1_THESIS_SCHEMA_BRIEF.md  Prediction_Log.md  README.md  README_Project_Goal.md  THESIS_INTAKE_REFACTOR_DEV_PLAN.md  Themes.md  Ticker_Baskets.yaml  pyproject.toml
config/: Ticker_Baskets.yaml  positions.yaml  risk_rules.yaml  ticker_baskets.yaml
docs/: Investment_Policy.md  README_Project_Goal.md  Review_Workflow.md  Thesis_Schema.md  User_Guide.md
prompts/: earnings_scorecard.txt  narrative_audit.txt  weekly_digest.txt
reviews/decisions/: 2026-03-10_VRT_ai_infrastructure_buildout_is_durable_watch_only.md  Prediction_Log.md
reviews/earnings/: 2026-03-10_VRT_ai_infrastructure_buildout_is_durable_earnings_review.md
scripts/: build_post_earnings.py  build_weekly_digest.py  config_models.py  data_store.py  ingest_news.py  ingest_sec.py  narrative_drift.py  new_decision_review.py  new_earnings_review.py  new_monthly_review.py  new_thesis.py  repo_helpers.py  review_helpers.py  thesis_ai.py  thesis_models.py  utils.py
templates/: Company_Earnings_Scorecard_Template.md  Decision_Checklist.md  Monthly_Theme_Review_Template.md
tests/: conftest.py  test_config_models.py  test_data_store.py  test_generators.py  test_ingestion.py  test_repo_helpers.py  test_reports.py  test_thesis_intake.py  test_thesis_schema.py  test_utils.py
tests/fixtures/: news_feed.xml  (+3 more)
themes/: Themes.md  themes.md
theses/: ai_infrastructure_buildout_is_durable.yaml  saas_shakeout_is_real_but_selective.yaml
(+2 files in other folders)
