[project]
name = "market-thesis-tracker"
version = "0.1.0"
description = "Local-first thematic investing research and decision-discipline tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.2",
  "feedparser>=6.0.11",
  "pyyaml>=6.0.2",
  "pydantic>=2.9.2",
  "jinja2>=3.1.4",
  "rich>=13.9.2",
  "typer>=0.12.5",
]

[dependency-groups]
dev = [
  "pre-commit>=3.8.0",
  "yamllint>=1.35.1",
  "markdownlint-cli2>=0.18.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
